# LichtFeld-Studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  THIRD_PARTY_LICENSES.md  pixi.toml  vcpkg.json
src/core/: CMakeLists.txt  abi.cpp  argument_parser.cpp  bhatt_lod.cpp  camera.cpp  checkpoint_format.cpp  crash_handler.cpp  cuda_error.cpp  failure_report.cpp  image_io.cpp  lod_merge_math.hpp  logger.cpp  mapped_file.cpp  memory_pressure.cpp  octree_lod.cpp  parameters.cpp  scene.cpp  splat_data.cpp  splat_data_transform.cpp  tensor_debug.cpp
src/core/cuda/: CMakeLists.txt  diagnostics_compile_check.cpp  diagnostics_compile_check.cu  memory_arena.cu  memory_arena.hpp
src/core/event_bridge/: control_boundary.cpp  control_boundary.hpp
src/core/tensor/: CMakeLists.txt  cuda_event_pool.cpp  cuda_stream_context.cpp  lazy_config.cpp  lazy_executor.cpp  lazy_ir.cpp  pinned_memory_allocator.cpp  size_bucketed_pool.cpp  tensor.cpp  tensor_advanced_ops.cpp  tensor_broadcast.cpp  tensor_broadcast_ops.cu  tensor_dot_optimized.cu  tensor_factory.cpp  tensor_fused_pointwise.cu  tensor_masking_ops.cpp  tensor_masking_ops.cu  tensor_matrix_ops.cpp  tensor_movement_ops.cpp  tensor_nn_ops.cpp  tensor_nn_ops.cu  tensor_ops.cu  tensor_random_ops.cpp  tensor_random_ops.cu  tensor_row_proxy.cpp  tensor_serialization.cpp  tensor_shape_ops.cpp  tensor_strided_ops.cu  tensor_unified_ops.cpp  tensor_utils.cpp  tensor_warp_reduce.cu
src/io/: CMakeLists.txt  loader_service.cpp  nvcodec_image_loader.cpp  nvcodec_image_loader.hpp  pipelined_image_loader.cpp  ply_to_rad_lod.cpp  video_frame_extractor.cpp  video_frame_extractor.hpp  video_player.cpp  video_player.hpp
src/io/cuda/: image_format_kernels.cu  image_format_kernels.cuh  kmeans.cu  rad_encode_quant.cu  rad_encode_quant.hpp
src/io/formats/: colmap.cpp  colmap.hpp  ply.cpp  ply.hpp  rad.cpp  rad.hpp  rad_dequant_math.hpp  rad_packed_page.hpp  sogs.cpp  spz.cpp  transforms.cpp
src/io/loaders/: blender_loader.cpp  colmap_loader.cpp  rad_loader.cpp
src/io/video/: color_convert.cu  color_convert.cuh  video_encoder.cpp
src/preprocessing/: CMakeLists.txt  preprocess.cpp
src/python/: CMakeLists.txt  _lfs_panel_contract.py  python_runtime.cpp  python_runtime.hpp  runner.cpp  runner.hpp
src/python/lfs/: module.cpp  notification_bridge.cpp  py_io.cpp  py_keymap.cpp  py_operator.cpp  py_params.cpp  py_params.hpp  py_plugins.cpp  py_rendering.cpp  py_rml.cpp  py_rml.hpp  py_scene.cpp  py_scene.hpp  py_scripts.cpp  py_selection.cpp  py_splat_data.cpp  py_store.cpp  py_tensor.cpp  py_ui.cpp  py_ui_hooks.cpp  py_ui_panels.cpp  rml_im_mode_panel_adapter.cpp  rml_im_mode_panel_adapter.hpp  rml_python_panel_adapter.cpp  rml_python_panel_adapter.hpp
src/python/lfs_plugins/: __init__.py  asset_index.py  asset_manager_panel.py  compat.py  depth_view_controls.py  environment.py  errors.py  export_panel.py  file_menu.py  gt_compare_controls.py  import_panels.py  input_settings_panel.py  installer.py  manager.py  plugin_marketplace_panel.py  registry.py  rendering_panel.py  rml_widgets.py  select_menu.py  toolbar.py  tools.py  training_panel.py  transform_controls.py
src/rendering/: CMakeLists.txt  cuda_vulkan_interop.cpp  cuda_vulkan_interop.hpp  environment_image.hpp  environment_math.hpp  export_post_process.cpp  export_post_process.cu  export_post_process_kernels.cuh  mesh2splat.cpp  raster_rendering_engine.cpp  selection_ops.cu  selection_ops.hpp  vulkan_result.hpp
src/sequencer/: CMakeLists.txt  animation_clip.cpp  animation_track.cpp  animation_track.hpp  animation_value.hpp  interpolation.cpp  interpolation.hpp  keyframe.hpp  timeline.cpp
src/training/: CMakeLists.txt  checkpoint.cpp  dataset.hpp  progress.cpp  progress.hpp  trainer.cpp  trainer.hpp  training_setup.cpp
src/training/components/: bilateral_grid.cpp  bilateral_grid.hpp  ppisp.cpp  ppisp.hpp  ppisp_controller.cu  ppisp_controller.hpp  ppisp_controller_pool.cu  ppisp_controller_pool.hpp  ppisp_file.cpp
src/training/control/: command_api.cpp  command_api.hpp
src/visualizer/: CMakeLists.txt  app_store.cpp  gui_capabilities.cpp  visualizer_impl.cpp  visualizer_impl.hpp
tests/: CMakeLists.txt  tensor_hardening_cuda_utils.cu  tensor_hardening_test_utils.hpp  test_allocator_policy.cpp  test_arena_metrics_contention.cpp  test_argument_parser.cpp  test_assert_hardening.cpp  test_atomic_output.cpp  test_background_image.cpp  test_bool_any_all.cpp  test_checkpoint_resume.cpp  test_colmap_image_layout.cpp  test_colmap_points3d_text.cpp  test_cpu_dtype_conversions.cpp  test_cuda_error.cpp  test_cuda_event_pool.cpp  test_export_env_composite.cpp  test_expression_templates.cpp  test_fastgs_analytical_gradients.cpp  test_fastgs_kernels.cpp  test_fused_l1_ssim.cpp  test_gsplat_rasterizer.cpp  test_headless_run_coordinator.cpp  test_image_kernels.cpp  test_image_resize_parallel.cpp  test_input_controller_dataset_load.cpp  test_input_controller_focus.cpp  test_lod_page_cache.cpp  test_lod_page_dequant.cpp  test_lod_upload_engine.cpp  test_logger.cpp  test_main.cpp  test_mask_loss.cpp  test_mcmc.cpp  test_mcmc_multinomial.cpp  test_mcmc_nan_fix.cpp  test_mcp_app_utils.cpp  test_memory_pressure.cpp  test_mesh_loader.cpp  test_mrnf_strategy.cpp  (+78 more)
tests/python/: conftest.py  test_asset_manager_panel.py  test_async_plugin_loading.py  test_export_panel.py  test_hooks.py  test_hot_reload_edge_cases.py  test_hot_reload_fixes.py  test_import_dialog_panels.py  test_input_settings_panel.py  test_layout_composition.py  test_menu_schemas.py  test_menubar_resources.py  test_operator_properties.py  test_operator_system.py  test_pano_coordinate_regressions.py  test_plugin_api_surface.py  test_plugin_callbacks.py  test_plugin_concurrency.py  test_plugin_error_recovery.py  test_plugin_marketplace_panel.py  test_plugin_system.py  test_property_system.py  test_signals.py  test_store.py  test_tensor.py  test_tool_registry_activation.py  test_toolbar_hooks.py  test_tools_new.py  test_training_panel_regressions.py  test_transform_controls_panel.py  test_viewport_overlay_hooks.py
(+497 files in other folders)
